refactor: Update requirements.txt with additional dependencies for 3D plot support

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,19 @@ pyarrow==15.0.0
 pyasn1==0.6.0
 pyglet==1.5.28
 pylance==0.10.17
+PyOpenGL==3.1.7
 pyparsing==3.1.2
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.13
+PyQt5-sip==12.13.0
+pyqtgraph==0.13.7
+PySide2==5.13.2
 PySimpleGUI==5.0.4
 python-dateutil==2.9.0.post0
 python-utils==3.8.2
 rsa==4.9
 scipy==1.13.0
+shiboken2==5.13.2
 six==1.16.0
 trimesh==4.3.2
 typing_extensions==4.11.0
