--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,4 @@
-contourpy==1.2.1
-cycler==0.12.1
-fonttools==4.51.0
-kiwisolver==1.4.5
-matplotlib==3.8.4
-networkx==3.3
-numpy==1.26.4
-numpy-stl==3.1.1
-packaging==24.0
-pillow==10.3.0
-pyarrow==15.0.0
-pyasn1==0.6.0
-pyglet==1.5.28
-pylance==0.10.17
-PyOpenGL==3.1.7
-pyparsing==3.1.2
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.13
-PyQt5-sip==12.13.0
-pyqtgraph==0.13.7
-PySide2==5.13.2
-PySimpleGUI==5.0.4
-python-dateutil==2.9.0.post0
-python-utils==3.8.2
-rsa==4.9
-scipy==1.13.0
-shiboken2==5.13.2
-six==1.16.0
-trimesh==4.3.2
-typing_extensions==4.11.0
+PyQt5-Qt5==5.15.2
+numpy
+python-stl
+pyqtgraph==0.13.3
