feat: Add debug features for STL to SCAD conversion, including output files and test scripts

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ stl2scad.code-workspace
 *.lock
 *.sqlite
 *.stl
-*.scad
+*.scad.clinerules-architect
+.clinerules-ask
+.clinerules-code
+memory-bank/
