--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ numpy>=1.24.3
 numpy-stl>=3.2.0
 PyQt5>=5.15.11
 pyqtgraph>=0.13.3
+PyOpenGL>=3.1.7
+PyOpenGL-accelerate>=3.1.7
 typing_extensions>=4.12.2
 psutil>=5.9.0
 
