feat: Add CI workflow and testing setup with coverage reporting

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,12 +4,40 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Show extra test summary info
+# Show extra test summary info and coverage
 addopts = 
     --verbose
     --showlocals
     --tb=short
     --capture=no
+    --cov=stl2scad
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-branch
+    --no-cov-on-fail
+
+# Coverage settings
+[coverage:run]
+branch = True
+source = stl2scad
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    if self.debug:
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    pass
+    raise ImportError
+    except ImportError:
+ignore_errors = True
+omit =
+    tests/*
+    setup.py
+
+[coverage:html]
+directory = coverage_html
 
 # Log settings
 log_cli = true
